[tool.poetry]
name = "matrix"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1"
requests = "^2.31"
matplotlib = "^3.7"
numpy = "<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
